@startuml Pacman 

class Personaje{
    + MoveLeft()
    + MoveRight()
    + MoverUp()
    + MoverDown()
}


class Fantasma{
    +MoveLeft
    +MoverDown
    +MoveRight
    +MoverUp
}

class Puntuacion
class Comestible
class PantallaInicio

 Jugador "1" *-- "1" Personaje 
 Personaje "1" *-- "4.." Comestible
 Jugador "1" *-- "1..*" Puntuacion
 Jugador "1" o-- "1" PantallaInicio
 Fantasma "1" --* "1" Jugador 
 @enduml